<resources>
    <string name="app_name">Olvo Agent</string>
    <string name="Login">Login</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="loginButton">Log in</string>
    <string name="quick_recharge_addShop">Add Shop</string>
    <string name="create_Route">Create Route</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Shop</string>
    <string name="menu_shop_summary">Shop Summary</string>
    <string name="menu_profileReport">Profile </string>
    <string name="menu_route">Route </string>
    <string name="Route_addRoute">Add Route</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="payment_request">Payment Request</string>
    <string name="inVoice">Invoice</string>
    <string name="search">Search</string>
    <string name="invoice_history">Invoice History</string>


    <string name="ok">OK</string>
    <string name="Select_route">Select Route</string>
    <string name="adshop_register">Register</string>
    <string name="delete_popup">Do you really want to delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


    <string name="menu_logout">LOG OUT</string>
    <string name="profile_phoneRegister_text"> Mobile Number</string>
    <string name="profilepage_personal_info">Personal info</string>
    <string name="profile_page_Name">Name</string>
    <string name="profile_page_Email">Email</string>
    <string name="profile_page_Country">Country</string>
    <string name="add_shop_country_code">Country Code</string>
    <string name="profile_page_Region">Region</string>
    <string name="profile_pin_Change">CHANGE PIN</string>
    <string name="adShop_route">Route</string>
    <string name="enable_voip">Enable VOIP</string>
    <string name="filter_date">Date</string>
    <string name="description">Description</string>
    <string name="menu_quick_access">Quick Access </string>
    <string name="addShop_threshold">Threshold</string>
    <string name="addShop_shop_Type">Shop Type</string>
    <string name="transaction_number">Transaction Number</string>


    <string name="enable_mobile">Enable Mobile</string>
    <string name="adShop_button">SUBMIT</string>
    <string name="recharge_filter">Filter</string>
    <string name="shop_search">Search Shop</string>
    <string name="routeList">Route List</string>
    <string name="editShop">Edit Shop</string>
    <string name="shop_page_select_route_recharge">Recharge</string>
    <string name="shop_page_select_route_map">Map</string>
    <string name="title_activity_maps">Map</string>
</resources>
