<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.root.olvoagent.ui.login.Login">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_logo_login"/>


    </RelativeLayout>


    <LinearLayout
        android:id="@+id/relt_credentls"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:orientation="vertical">


        <EditText
            android:id="@+id/editext_username"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/login_username"
            android:textAlignment="center"
            android:maxLines="1"
            android:maxLength="100"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textColor="@color/profile_info_editText_Colour"
            android:textColorHint="@color/profile_phoneRegister_textColour"
            android:nextFocusDown="@+id/editext_password"/>


        <EditText

            android:id="@+id/editext_password"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_below="@id/editext_username"
            android:layout_centerInParent="true"
            android:layout_marginTop="25dp"
            android:inputType="textPassword"
            android:background="@drawable/login_edittext_background"
            android:hint="@string/login_password"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="@color/profile_info_editText_Colour"
            android:textColorHint="@color/profile_phoneRegister_textColour"
            />

    </LinearLayout>


    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true"
        android:background="@drawable/login_button_background"
        android:text="@string/loginButton"
        android:textColor="@color/white"
        android:textSize="18dp"/>


</RelativeLayout>

